--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <option value="piedra">Piedra</option>
                 <option value="papel">Papel</option>
                 <option value="tijera">Tijera</option>
-                <input class="js-btn" type="submit" value="Jugar">
+                <input class="js-btn" type="button" value="Jugar">
             </select>
         </form>
         <p class="js-player">Jugador:</p>
