--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 <input class="js-btn" type="button" value="Jugar">
             </select>
         </form>
-        <p class="js-player">Jugador:</p>
-        <p class="js-pc">Computadora:</p>
+        <p class="js-response">Vamos a jugar!</p>
+        <p class="js-player">Jugador: 0</p>
+        <p class="js-pc">Computadora: 0</p>
         <!-- <button></button> -->
     </main>
     <script src="main.js"></script>
