--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Evaluacion intermedia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -15,7 +16,7 @@
                 <option value="piedra">Piedra</option>
                 <option value="papel">Papel</option>
                 <option value="tijera">Tijera</option>
-                <input class="js-btn" type="button" value="Jugar">
+                <input class="js-btn button" type="button" value="Jugar">
             </select>
         </form>
         <p class="js-response">Vamos a jugar!</p>
