--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Juego Piedra Papel y Tijera</h1>
+        <h1>Juego Piedra, Papel y Tijera</h1>
         <p>Introduce aqui tu jugada:</p>
         <form action="">
             <select class="js-select" name="" id="">
