--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluacion intermedia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <main>
         <h1>Juego Piedra, Papel y Tijera</h1>
         <p>Introduce aqui tu jugada:</p>
-        <form action="">
-            <select class="js-select" name="" id="">
+        <form action="GET">
+            <select class="js-select" name="selection" id="selection">
                 <option value="piedra">Piedra</option>
                 <option value="papel">Papel</option>
                 <option value="tijera">Tijera</option>
@@ -24,6 +24,6 @@
         <p class="js-pc">Computadora: 0</p>
         <input class="js-btn2 button2 hidden" type="button" value="Reiniciar el Juego">
     </main>
-    <script src="main.js"></script>
+    <script src=".js/main.js"></script>
 </body>
 </html>
