--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             </select>
         </form>
         <p class="js-response">Vamos a jugar!</p>
+        <p class="js-counter">Numero de jugadas: 0</p>
         <p class="js-player">Jugador: 0</p>
         <p class="js-pc">Computadora: 0</p>
         <input class="js-btn2 button2 hidden" type="button" value="Reiniciar el Juego">
     </main>
-    <script src=".js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
