--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <p>Introduce aqui tu jugada:</p>
         <form action="GET">
             <select class="js-select" name="selection" id="selection">
+                <option value="">Selecciona</option>
                 <option value="piedra">Piedra</option>
                 <option value="papel">Papel</option>
                 <option value="tijera">Tijera</option>
-                <input class="js-btn button" type="button" value="Jugar">
             </select>
+            <input class="js-btn button" type="button" value="Jugar">
         </form>
         <p class="js-response">Vamos a jugar!</p>
         <p class="js-counter">Numero de jugadas: 0</p>
